@@ -1,6 +1,6 @@
 package monitoring.appServer.application;
 import com.fasterxml.jackson.databind.JsonNode;
-import net.minidev.json.JSONObject;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import net.minidev.json.parser.ParseException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
@@ -8,17 +8,19 @@ import org.junit.jupiter.api.Test;
 import org.mockito.*;
 import org.springframework.test.util.ReflectionTestUtils;
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.when;
 
-
-
+@Disabled // Until i resolve Jackson issues
 class ApplicationStatusServiceTest {
 
 
     @Mock
     private URLService mockUrlService;
+    private final ObjectMapper objectMapper = new ObjectMapper();
     @InjectMocks
     private ApplicationStatusService applicationStatusService;
 
@@ -29,35 +31,36 @@ class ApplicationStatusServiceTest {
         ReflectionTestUtils.setField(applicationStatusService, "urlService", mockUrlService);
     }
 
-    @Disabled
+
+    @Disabled // Until i resolve Jackson issues
     @Test
     void testGetNotRunningApps_WhenAllAppsRunning() throws Exception {
-        // Mock the URLService's behavior
-        Mockito.when(mockUrlService.getURL()).thenReturn(List.of("http://app1", "http://app2"));
-        JsonNode mockJson = Mockito.mock(JsonNode.class);
-        Mockito.when(mockJson.path("status").asText()).thenReturn("UP");
-        Mockito.when(mockUrlService.makeHttpRequest(anyString())).thenReturn(mockJson);
+        when(mockUrlService.getURL()).thenReturn(Arrays.asList("http://app1", "http://app2"));
+        JsonNode upNode = objectMapper.createObjectNode().put("status", "down");
+        upNode.toString();
+        when(mockUrlService.makeHttpRequest(anyString())).thenReturn(upNode);
 
         List<String> notRunningApps = applicationStatusService.getNotRunningApps();
 
         assertTrue(notRunningApps.isEmpty());
     }
-    @Disabled
+
+    @Disabled // Until i resolve Jackson issues
     @Test
     void testGetNotRunningApps_WhenSomeAppsAreRunning() throws IOException, ParseException {
         // Setup URLs
-        Mockito.when(mockUrlService.getURL()).thenReturn(List.of("http://app1", "http://app2", "http://app3"));
+        when(mockUrlService.getURL()).thenReturn(List.of("http://app1", "http://app2", "http://app3"));
 
         // Create JSONObjects for different statuses
         JsonNode mockJsonUp = Mockito.mock(JsonNode.class);
-        Mockito.when(mockJsonUp.path("status").asText()).thenReturn("UP");
+        when(mockJsonUp.path("status").asText()).thenReturn("UP");
         JsonNode mockJsonDown = Mockito.mock(JsonNode.class);
-        Mockito.when(mockJsonUp.path("status").asText()).thenReturn("Down");
+        when(mockJsonUp.path("status").asText()).thenReturn("Down");
 
         // Setup mock behavior for specific URLs
-        Mockito.when(mockUrlService.makeHttpRequest("http://app1")).thenReturn(mockJsonUp); // app1 is UP
-        Mockito.when(mockUrlService.makeHttpRequest("http://app2")).thenReturn(mockJsonDown); // app2 is DOWN
-        Mockito.when(mockUrlService.makeHttpRequest("http://app3")).thenReturn(mockJsonDown); // app3 is DOWN
+        when(mockUrlService.makeHttpRequest("http://app1")).thenReturn(mockJsonUp); // app1 is UP
+        when(mockUrlService.makeHttpRequest("http://app2")).thenReturn(mockJsonDown); // app2 is DOWN
+        when(mockUrlService.makeHttpRequest("http://app3")).thenReturn(mockJsonDown); // app3 is DOWN
 
         // Call the methods under test
         List<String> notRunningApps = applicationStatusService.getNotRunningApps();
@@ -68,16 +71,17 @@ class ApplicationStatusServiceTest {
         assertEquals(1, runningApps.size()); // Expect 1 app running (app1)
     }
 
-    @Disabled
+
+    @Disabled // Until i resolve Jackson issues
     @Test
     void testGetNotRunningApps_WhenAllAppsAreRunning() throws IOException, ParseException {
-        Mockito.when(mockUrlService.getURL()).thenReturn(List.of("http://app1", "http://app2", "http://app3"));
+        when(mockUrlService.getURL()).thenReturn(List.of("http://app1", "http://app2", "http://app3"));
 
         JsonNode mockJsonUp = Mockito.mock(JsonNode.class);
-        Mockito.when(mockJsonUp.path("status").asText()).thenReturn("UP");
+        when(mockJsonUp.path("status").asText()).thenReturn("UP");
 
 
-        Mockito.when(mockUrlService.makeHttpRequest(anyString())).thenReturn(mockJsonUp);
+        when(mockUrlService.makeHttpRequest(anyString())).thenReturn(mockJsonUp);
 
         List<String> notRunningApps = applicationStatusService.getNotRunningApps();
         List<String> runningApps = applicationStatusService.getRunningApps();
